# testing-app2

./: .gitignore
backend/: .env.example  main.py  pyproject.toml
backend/routers/: __init__.py  custom_dashboard.py  marketing.py  overview.py  query.py
backend/services/: data_loader.py  user_context.py
frontend/: next.config.ts  package.json
frontend/.next/standalone/: server.js
frontend/.next/standalone/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json
frontend/.next/standalone/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json
frontend/.next/static/chunks/: 0a2f5824.a3301267df4397ee.js  743-7c54f7ac1e84c62c.js  main-app-4998fcc09b521776.js  main-fa61c75a985656aa.js
frontend/app/: globals.css  layout.tsx  providers.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/(dashboard)/custom/: ChartBuilderSidebar.tsx  page.tsx
frontend/app/(dashboard)/details/: page.tsx
frontend/app/(dashboard)/marketing/: page.tsx
frontend/components/layout/: Header.tsx  NavTabs.tsx
frontend/components/ui/: DataStatusBadge.tsx  InfoPopover.tsx  PoweredByKeboola.tsx
frontend/lib/: api.ts  chart-config-storage.ts  chart-utils.ts  constants.ts  dashboard-storage.ts  types.ts
keboola-config/: setup.sh
keboola-config/nginx/sites/: default.conf
(+49 files in other folders)
